add generic repository

--- a/Presentation/KuzemBackendDotnet.API/appsettings.json
+++ b/Presentation/KuzemBackendDotnet.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AppName":  "asd",
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSql": "User ID=postgres;Password=1234;Host=localhost;Port=5432;Database=kuzemdb;"
+  }
 }
