--- a/Infrastructure/KuzemBackendDotnet.Persistence/KuzemBackendDotnet.Persistence.csproj
+++ b/Infrastructure/KuzemBackendDotnet.Persistence/KuzemBackendDotnet.Persistence.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\Core\KuzemBackendDotnet.Application\KuzemBackendDotnet.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Concretes\" />
+  </ItemGroup>
+
 </Project>
